serd (1.0.1) unstable;

  * Add SerdBuffer for mutable buffers to keep SerdChunk const-correct
  * Add SerdWorld for shared library state
  * Add extensible logging API
  * Add extensible logging API
  * Add model for storing statements in memory
  * Add option for writing terse output without newlines
  * Add support for validation
  * Add support for writing terse collections
  * Add support for xsd:float and xsd:double literals
  * Bring read/write interface closer to C standard
  * Make nodes opaque
  * Make serd_strtod API const-correct
  * Remove half-baked serd_uri_to_path()
  * Remove useless character counting from API
  * Rename SerdChunk to SerdStringView
  * Report writer errors and add strict write mode
  * Simplify streaming API and improve pretty printing
  * Simplify writer style options
  * Use a fixed-size reader stack
  * Use char* for strings in public API

 -- David Robillard <d@drobilla.net>  Sat, 19 Jan 2019 12:31:12 +0000

serd (0.30.3) unstable;

  * Fix EOF handling while reading in bulk or from strings
  * Fix lax handling of string errors
  * Fix reading from a null-delimited socket

 -- David Robillard <d@drobilla.net>  Sun, 08 Dec 2019 22:20:08 +0000

serd (0.30.2) stable;

  * Fix GCC 4 build
  * Fix colliding blank nodes when parsing TriG
  * Fix missing parse error messages
  * Fix parsing "a" abbreviation without padding whitespace
  * Fix parsing TriG graphs with several squashed trailing dots
  * Fix resolving some URIs against base URIs with no trailing slash
  * Improve build system and CI integration
  * Improve documentation

 -- David Robillard <d@drobilla.net>  Sun, 20 Oct 2019 22:28:01 +0000

serd (0.30.0) stable;

  * Add NTriples test suite
  * Add basic error tolerant parsing for line-based formats
  * Add serd_free for freeing memory allocated by serd
  * Add serdi option to write ASCII output
  * Clarify errors returned by serd_env_expand()
  * Clean up testing code
  * Fix building with MSVC